Update ticket service